--- a/Final Submissions/UberReviews.ipynb
+++ b/Final Submissions/UberReviews.ipynb
@@ -4424,6 +4424,20 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7f5c3845",
+   "metadata": {},
+   "source": [
+    "**Topic 1: On the road**\n",
+    "\n",
+    "**Topic 2: Payment Procedures**\n",
+    "\n",
+    "**Topic 3: Price**\n",
+    "\n",
+    "**Topic 4: Time**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5308df27",
    "metadata": {},
    "source": [
